--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,20 @@
 ---
 import "../styles/global.css";
 import Layout from "../layouts/Layout.astro";
+import Header from "../components/Header.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-  <h1 class="text-3xl font-bold underline">ST Industrial</h1>
+  <Header />
+  <div class="max-w-screen-lg mx-auto p-4">
+    <h1 class="text-xl fron-bold">Bienvenido a ST Industrial</h1>
+    <p>
+      Nos encontramos en Bogotá, Colombia y ofrecemos una amplia gama de
+      servicios para ayudarlo con sus necesidades industriales. proximamente
+      estaremos lanzando nuestra pagina web.
+    </p>
+  </div>
 </Layout>
