--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,140 @@
 ---
-import HeaderItem from "./HeaderItem.astro";
+import { Icon } from "astro-icon/components";
+import type { NavItem } from "~/types";
+
+const navItems: Array<NavItem> = [
+  { title: "About US", url: "#about_us" },
+  { title: "Services", url: "#services" },
+  { title: "Contact", url: "#contact" },
+];
 ---
 
-<nav class="bg-white border-gray-200">
-  <div
-    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 border-b border-gray-200"
-  >
-    <a href="#" class="flex items-center space-x-3">
-      <span class="self-center text-2xl font-semibold whitespace-nowrap">
-        ST Industrial
-      </span>
-    </a>
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      <ul
-        class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white"
+<header
+  id="page-header"
+  class="absolute bottom-0 z-20 flex w-full items-center justify-between border-b border-transparent px-8 py-4 text-white"
+>
+  <a class="flex items-center gap-3 hover:!text-default" href="#">
+    <h1 class="sr-only">ST Industrial</h1>
+    <Icon name="logomark" class="size-10" />
+    ST Industrial
+  </a>
+  <div>
+    <div class="flex items-center gap-6">
+      <nav class="hidden sm:block">
+        <ul class="flex items-center gap-6">
+          {
+            navItems.map(({ title, url }) => (
+              <li>
+                <a class="text-sm" href={url}>
+                  {title}
+                </a>
+              </li>
+            ))
+          }
+        </ul>
+      </nav>
+      <button
+        id="open-nav-button"
+        type="button"
+        class="btn sm:hidden"
+        aria-label="Navigation"
       >
-        <HeaderItem title="Home" active={true} path="/" />
-        <HeaderItem title="About" active={false} path="/about" />
-        <HeaderItem title="Services" active={false} path="/services" />
-        <HeaderItem title="Contact" active={false} path="/contact" />
-      </ul>
+        <Icon name="menu" class="size-8" />
+      </button>
+    </div>
+    <div id="menu-modal" class="modal hidden" aria-hidden="true">
+      <div class="fixed inset-0 bg-default px-8 py-4 text-default">
+        <div class="space-y-4" role="dialog" aria-modal="true">
+          <header class="text-right">
+            <button
+              id="close-nav-button"
+              type="button"
+              class="btn"
+              aria-label="Close navigation"
+            >
+              <Icon name="close" class="size-8" />
+            </button>
+          </header>
+          <div class="flex justify-center">
+            <Icon name="logomark" class="size-16" />
+          </div>
+          <nav>
+            <ul class="flex flex-col">
+              {
+                navItems.map(({ title, url }) => (
+                  <li>
+                    <a class="block py-4 text-center text-xl" href={url}>
+                      {title}
+                    </a>
+                  </li>
+                ))
+              }
+            </ul>
+          </nav>
+        </div>
+      </div>
     </div>
   </div>
-</nav>
+</header>
+
+<script>
+  import MicroModal from "micromodal";
+  import invariant from "tiny-invariant";
+
+  const menuModalId = "menu-modal";
+
+  const header = document.querySelector("#page-header") as HTMLElement;
+  const page = document.documentElement;
+  const menu = document.querySelector(`#${menuModalId} ul`);
+  const openNavButton = document.querySelector("#open-nav-button");
+  const closeNavButton = document.querySelector("#close-nav-button");
+
+  invariant(header, "header should not be null");
+  invariant(menu, "menu should not be null");
+  invariant(openNavButton, "openNavButton should not be null");
+  invariant(closeNavButton, "closeNavButton should not be null");
+
+  const openMenu = () => {
+    MicroModal.show(menuModalId, { disableScroll: true });
+  };
+
+  const closeMenu = () => {
+    MicroModal.close(menuModalId);
+  };
+
+  openNavButton.addEventListener("click", openMenu);
+  closeNavButton.addEventListener("click", closeMenu);
+
+  document.addEventListener("scroll", () => {
+    const d = page.clientHeight - page.scrollTop - header.offsetHeight;
+    header.classList.toggle("fixed-header", d < 0);
+  });
+
+  menu.addEventListener("click", (event) => {
+    if ((event.target as HTMLElement).tagName === "A") {
+      closeMenu();
+    }
+  });
+</script>
+
+<noscript>
+  <style>
+    #open-nav-button {
+      display: none;
+    }
+  </style>
+</noscript>
+
+<style>
+  .fixed-header {
+    bottom: auto;
+    position: fixed;
+    top: 0;
+    border: 1px solid var(--color-default);
+    background-color: var(--color-default);
+    color: var(--color-default);
+  }
+  .modal.is-open {
+    display: block;
+  }
+</style>
