--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,17 @@
 ---
-import "../styles/global.css";
-import Layout from "../layouts/Layout.astro";
-import Header from "../components/Header.astro";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import "~/styles/global.css";
+import Layout from "~/layouts/Layout.astro";
+import Header from "~/components/Header.astro";
+import Splash from "~/components/Splash.astro";
+import AboutUs from "~/components/AboutUs.astro";
+import Services from "~/components/Services.astro";
 ---
 
 <Layout>
   <Header />
-  <div class="max-w-screen-lg mx-auto p-4">
-    <h1 class="text-xl fron-bold">Bienvenido a ST Industrial</h1>
-    <p>
-      Nos encontramos en Bogotá, Colombia y ofrecemos una amplia gama de
-      servicios para ayudarlo con sus necesidades industriales. proximamente
-      estaremos lanzando nuestra pagina web.
-    </p>
+  <Splash />
+  <div class="space-y-24 px-8 py-32">
+    <AboutUs />
+    <Services />
   </div>
 </Layout>
