--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,8 @@ import type { NavItem } from "~/types";
 const navItems: Array<NavItem> = [
   { title: "About US", url: "#about_us" },
   { title: "Services", url: "#services" },
-  { title: "Contact", url: "#contact" },
+  { title: "Clientes", url: "#clients" },
+  { title: "Contacto", url: "#contact" },
 ];
 ---
 
@@ -25,7 +26,7 @@ const navItems: Array<NavItem> = [
           {
             navItems.map(({ title, url }) => (
               <li>
-                <a class="text-sm" href={url}>
+                <a class="text-sm hover:text-primary" href={url}>
                   {title}
                 </a>
               </li>
@@ -43,7 +44,7 @@ const navItems: Array<NavItem> = [
       </button>
     </div>
     <div id="menu-modal" class="modal hidden" aria-hidden="true">
-      <div class="fixed inset-0 bg-default px-8 py-4 text-default">
+      <div class="fixed inset-0 bg-black px-8 py-4 text-white">
         <div class="space-y-4" role="dialog" aria-modal="true">
           <header class="text-right">
             <button
@@ -63,7 +64,10 @@ const navItems: Array<NavItem> = [
               {
                 navItems.map(({ title, url }) => (
                   <li>
-                    <a class="block py-4 text-center text-xl" href={url}>
+                    <a
+                      class="block py-4 text-center text-xl hover:text-primary"
+                      href={url}
+                    >
                       {title}
                     </a>
                   </li>
