Add contact and footer sections, add new icons

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -8,7 +8,7 @@ const features: Array<FeatureItem> = [
     title: "Mantenimiento Preventivo",
     description:
       "Realizamos mantenimiento preventivo a sus equipos, inclutendo limpieza general, lubricación, engrace de partes mecanicas y validacion del estado de los compuestos, mecanicos, electricos y electronicos de sus equipos.",
-    icon: "handshake",
+    icon: "maintenance",
   },
   {
     title: "Mantenimiento Plus",
@@ -20,7 +20,7 @@ const features: Array<FeatureItem> = [
     title: "Mantenimiento Correctivo",
     description:
       "Este servicio se ofrece generalmente después del mantenimiento preventivo para solucionar problemas que requieren más tiempo del previsto. También puede ser necesario en caso de fallas imprevistas que afecten el funcionamiento de los equipos. Incluye una revisión diagnóstica y la elaboración de un plan de acción para resolver el problema de manera eficiente.",
-    icon: "handshake",
+    icon: "repair",
   },
 ];
 ---
