--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import Splash from "@components/Splash.astro";
 import AboutUs from "@components/AboutUs.astro";
 import Services from "@components/Services.astro";
 import Clients from "@components/Clients.astro";
+import Contact from "@components/Contact.astro";
+import Footer from "@components/Footer.astro";
 ---
 
 <Layout>
@@ -15,5 +17,7 @@ import Clients from "@components/Clients.astro";
     <AboutUs />
     <Services />
     <Clients />
+    <Contact />
   </div>
+  <Footer />
 </Layout>
