--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -21,8 +21,8 @@ const contactInfo = [
   {
     icon: "mail",
     title: "Email",
-    value: "contacto@st_industrial.com",
-    link: "mailto:contacto@st_industrial.com",
+    value: "st.industrial77@gmail.com",
+    link: "mailto:st.industrial77@gmail.com",
   },
   {
     icon: "chat",
