--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Splash from "@components/Splash.astro";
 import AboutUs from "@components/AboutUs.astro";
 import Services from "@components/Services.astro";
 import Clients from "@components/Clients.astro";
+import Experiences from "@components/Experiences.astro";
 import Contact from "@components/Contact.astro";
 import Footer from "@components/Footer.astro";
 ---
@@ -17,6 +18,7 @@ import Footer from "@components/Footer.astro";
     <AboutUs />
     <Services />
     <Clients />
+    <Experiences />
     <Contact />
   </div>
   <Footer />
